Fix Problems
- Fix the overlay of each of the subprojects to prevent it from being too wide from the user's pov
- Fix the information relayed on the graphics design page for the first 3 projects

--- a/stylesheets/commonPortfolio.css
+++ b/stylesheets/commonPortfolio.css
@@ -7,6 +7,10 @@
     right: 0;
     bottom: 0;
 }
+
+body{
+  overflow-x: hidden;
+}
   
   .gradient {
     background-image: linear-gradient(#F4A5AE, #A8577E,#A8577E,#A8577E, #043565);
